--- a/style.css
+++ b/style.css
@@ -228,4 +228,63 @@ body {
     text-align: left;
     margin-bottom: 30px;
 }
+/* News Card Style */
+.news-card {
+    width: 100%;
+    height: 330px;
+    border-radius: 24px;
+    background-color: rgb(255, 255, 255);
+    padding: 36px;
+    margin-bottom: 30px;
+}
+.news-card-1 {
+    display: flex;
+    gap: 20px;
+}
+.news-card-2 {
+    display: flex;
+    gap: 20px;
+    flex-direction: row-reverse;
+}
+.news-cd-img {
+    width: 350px;
+    height: 260px;
+    border-radius: 24px;
+}
+.news-card-hd {
+    color: rgba(14, 14, 14, 0.8);
+    font-size: 30px;
+    font-weight: 700;
+    text-align: left;
+    margin-bottom: 7px;
+}
+.news-icon {
+    width: 100px;
+    height: 30px;
+}
+.date-time {
+    color: rgba(14, 14, 14, 0.7);
+    font-size: 14px;
+    font-weight: 400;
+    text-align: left;
+    margin-top: 10px;
+    margin-bottom: 17px;
+}
+.news-details {
+    color: rgba(14, 14, 14, 0.7);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+    margin-bottom: 18px;
+} 
+.news-card-btn {
+    border: none;
+    outline: none;
+    border-radius: 8px;
+    padding: 11px 23px;
+    color: rgb(255, 255, 255);
+    background: rgb(0, 106, 80);
+}
+/* News Card Style */
 /* Recent News Area Style Ends */
