--- a/style.css
+++ b/style.css
@@ -354,3 +354,56 @@ body {
     padding: 15px 30px;
 }
 /* Donate Area Style Ends */
+
+/* Subcription Area Style Starts */
+.subscription-area {
+    margin-top: 70px;
+    width: 100%;
+    height: 370px;
+    padding: 60px 75px;
+    border-radius: 20px;
+    background-color: rgb(198, 228, 214);
+    text-align: center;
+}
+.subs-hd {
+    color: rgb(14, 14, 14);
+    font-size: 36px;
+    font-weight: 700;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+.subs-para-1 {
+    color: rgba(14, 14, 14, 0.7);
+    max-width: 60%;
+    margin: 0 auto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    margin-bottom: 24px;
+}
+.subs-in {
+    width: 60%;
+    height: 50px;
+    padding: 14px 34px;
+    border-radius: 8px 0px 0px 8px;
+    border: none;
+    background: rgb(255, 255, 255);
+    font-size: 16px;
+}
+.subs-btn {
+    color: rgb(255, 255, 255);
+    font-size: 18px;
+    font-weight: 600;
+    border: none;
+    border-radius: 0px 8px 8px 0px;
+    padding: 14px 30px;
+    background-color: rgb(0, 106, 80);
+    margin-left: -4px;
+}
+.subs-para-2 {
+    margin-top: 35px;
+    color: rgba(14, 14, 14, 0.7);
+    font-size: 16px;
+    font-weight: 400;
+}
+/* Subcription Area Style Ends */
