--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 /* Nav Bar Styles Starts */
 .nav-bar {
-    margin-top: 30px;
+    margin-top: 25px;
     height: 80px;
     display: flex;
     justify-content: space-between;    
@@ -38,7 +38,7 @@ body {
 
 /* Banner Section Styles Starts */
 .banner {
-    margin-top: 30px;
+    margin-top: 25px;
     height: 500px;
     background-color: rgb(198, 228, 214);
     border-radius: 24px;
@@ -371,7 +371,7 @@ body {
 }
 .donate-btn:hover {
     color: rgb(255, 255, 255);
-    background-color: rgb(25, 65, 55);
+    background-color: rgb(1, 68, 177);
 }
 /* Donate Area Style Ends */
 
@@ -419,6 +419,9 @@ body {
     padding: 14px 30px;
     background-color: rgb(0, 106, 80);
     margin-left: -4px;
+}
+.subs-btn:hover {
+    background-color: tomato;
 }
 .subs-para-2 {
     margin-top: 35px;
